# gtk_textedit

./: CMakeLists.txt
.cache/clangd/index/: main.cxx.6B0C8B7FF38DD296.idx  textedit.cxx.B493DD2CF17B105B.idx  textedit.h.89DDDB14BD94C2C0.idx
src/: CMakeLists.txt  main.cxx  textedit.cxx  textedit.h
